fixed loader alignment

--- a/src/views/components/loader/style.module.scss
+++ b/src/views/components/loader/style.module.scss
@@ -35,6 +35,7 @@
   align-items: center;
   background-color: transparent;
   box-sizing: border-box;
+  align-self: center;
 }
 
 .circleBorder {
